@@ -14,6 +14,7 @@ Revision history for Rex
  [MINOR]
 
  [NEW FEATURES]
+ - Add Slackware support
 
  [REVISION]
 
